JDK 1.4 - unfortunately
git-svn-id: https://svn.apache.org/repos/asf/ant/core/trunk@744132 13f79535-47bb-0310-9956-ffa450edef68